<resources>
    <string name="app_name">Synthesizer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="tools">Tools</string>
    <string name="note_h">H</string>
    <string name="note_a">A</string>
    <string name="note_g">G</string>
    <string name="note_f">F</string>
    <string name="note_e">E</string>
    <string name="note_d">D</string>
    <string name="note_c">C</string>

    <string-array name="melody_sizes">
        <item>2/4</item>
        <item>3/4</item>
        <item>4/4</item>
    </string-array>
    <string-array name="bass_types">
        <item>Нету</item>
        <item>Один раз тоника</item>
        <item>Повтор тоники</item>
        <item>Повтор тоники и доминанты</item>
    </string-array>
</resources>
